syntax = "proto3";

package questsearch;

service QuestionsService {
  rpc SearchQuestions (SearchRequest) returns (SearchResponse);
}

message SearchRequest {
  string query = 1;
  int32 pageNumber = 2;
  int32 pageSize = 3;
  string questionType = 4;
}

message SearchResponse {
  repeated Question questions = 1;
  int32 totalCount = 2;
  int32 totalPages = 3;
}

message Question {
  string id = 1;
  string type = 2;
  string title = 3;
}
